# OrcaFlow

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt  startup.py
dags/: orcaflow_pipeline.py
orcaflow/: __init__.py
orcaflow/api/: __init__.py  dataproc_connector.py  job_router.py  kafka_events.py  models.py  requirements.txt  spark_executor.py  start_server.py
orcaflow/jobs/: analytics_engine.py  hdfs_analytics.py  sample_pyspark.py
orcaflow/ml-classifier/: __init__.py  inference.py  requirements.txt  train.py
orcaflow/monitoring/: prometheus.yml
orcaflow/proto/: control_plane.proto
orcaflow/scripts/: setup.sh  test_submission.py
orcaflow/ui/: dashboard.html
orchestrator/: Cargo.toml  README.md  build.rs
orchestrator/proto/: flow_mgmt.proto  worker.proto
orchestrator/spark_conf/: worker.conf
orchestrator/src/ccm-agent/: grpc.rs  main.rs  setup.rs
orchestrator/src/ccm-agent/utils/: general.rs  job_monitor.rs  mod.rs
orchestrator/src/ccm-controller/: apis.rs  dto.rs  job_scheduler.rs  local_job_executor.rs  main.rs  setup.rs  worker_manager.rs
orchestrator/src/ccm-controller/spark/: helper.rs  job.rs  mod.rs  monitor.rs
orchestrator/src/ccm-controller/utils/: general.rs  grid.rs  job.rs  job_scheduler.rs  local_job_executor.rs  mod.rs  setup.rs  worker.rs  worker_manager.rs
orchestrator/src/common_utils/: farm.rs  general.rs  mod.rs  monitor.rs  qualifier.rs  spark.rs
orchestrator/src/data_types/: apis.rs  mod.rs
