[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ccm-controller"
path = "src/ccm-controller/main.rs"

[[bin]]
name = "ccm-agent"
path = "src/ccm-agent/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.2"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread", "process", "fs", "signal"] }
reqwest = {version = "0.12.5", features = ["json"]}
log4rs = { version = "1.3.0", features = ["gzip"]}
log = "0.4.21"
sysinfo = { version = "0.30.12", features = ["linux-tmpfs","linux-netdevs"]}
local-ip-address = "0.6.1"
tonic = "0.11"
prost = "0.12.3"
thiserror = "1.0.61"
clap = { version = "4.5.9", features = ["derive", "cargo"] }
chrono = "0.4.38"
regex = "1.10.6"
procfs = "0.17.0"
find_mountpoint = "1.0.3"
redb = { version = "=2.2.0", features = ["cache_metrics"] }
bincode = "1.1.3"
nix = { version = "0.30.1", features = ["signal", "process"] }

[build-dependencies]
tonic-build = "0.11"